# beebot

./: .gitignore  LICENSE  README.md  beezeebot_cli.py  beezeebot_cli.spec  doobee_cli.py  pyproject.toml  xcode.py
any_os/: any_os_detector.py
components/: asdf.py  brew.py  mac_platform.py  xcode.py
components/utils/: installable_component.py  subproc.py
mac_or_linux_os/: brew.py
macos/: __init__.py  mac_platform.py  platform.py  xcode.py
tests/: pytest_utils.py  test_maclinux.py  test_macos.py
utils/: cleanup.sh  unit_test.py
